updated the structure for a new front