@@ -1,46 +1,67 @@
 package com.dmitry.AutoPass.jwt;
 
 import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.Jwts;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.springframework.http.HttpHeaders;
+import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.security.Key;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Component
 public class JwtAuthFilter extends OncePerRequestFilter {
-    private final JwtService jwtService;
 
-    public JwtAuthFilter(JwtService jwtService) {
-        this.jwtService = jwtService;
+    private final Key key;
+
+    public JwtAuthFilter(Key key) {
+        this.key = key;
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
-                                    FilterChain filterChain) throws IOException, jakarta.servlet.ServletException {
-        String auth = request.getHeader("Authorization");
-        if (auth != null && auth.startsWith("Bearer ")) {
-            String token = auth.substring(7);
+    protected void doFilterInternal(
+            @NonNull HttpServletRequest request,
+            @NonNull HttpServletResponse response,
+            @NonNull FilterChain filterChain
+    ) throws ServletException, IOException {
+
+        String authHeader = request.getHeader(HttpHeaders.AUTHORIZATION);
+        if (StringUtils.hasText(authHeader) && authHeader.startsWith("Bearer ")) {
+            String token = authHeader.substring(7);
+
             try {
-                Claims claims = jwtService.parse(token);
-                String userId = claims.getSubject();
+                Claims claims = Jwts.parserBuilder().setSigningKey(key).build()
+                        .parseClaimsJws(token).getBody();
+
+                Object rolesObj = claims.get("roles");
                 @SuppressWarnings("unchecked")
-                List<String> roles = (List<String>) claims.get("roles");
-                var authorities = roles == null ? List.<SimpleGrantedAuthority>of()
-                        : roles.stream().map(SimpleGrantedAuthority::new).toList();
-                var authToken = new UsernamePasswordAuthenticationToken(userId, null, authorities);
-                SecurityContextHolder.getContext().setAuthentication(authToken);
-            } catch (Exception ignored) { /* токен невалиден — остаёмся анонимными */ }
+                List<String> roles = rolesObj instanceof List<?> l
+                        ? (List<String>) l
+                        : List.of();
+
+                var authorities = roles.stream()
+                        .map(SimpleGrantedAuthority::new)
+                        .collect(Collectors.toList());
+
+                // используем email как principal (или id — как удобнее)
+                String principal = claims.get("email", String.class);
+
+                var auth = new UsernamePasswordAuthenticationToken(principal, null, authorities);
+                SecurityContextHolder.getContext().setAuthentication(auth);
+            } catch (Exception ignored) {
+                // токен битый/протух — идём дальше без аутентификации
+            }
         }
+
         filterChain.doFilter(request, response);
     }
 }
